src/dotenv/snapshots/ntro__dotenv__zod__tests__gen-2.snap
---
source: src/dotenv/zod.rs
expression: output
---
Error {
    context: "found some conflicting types while parsing variables with type hints",
    source: ConflictingTypes {
        a: TypeHintAt {
            th: Number,
            line: 1,
            meta: Metadata {
                source: "\n# @type number\nKEY=\n            ",
                path: "src/dotenv/.env.test.0",
            },
        },
        b: TypeHintAt {
            th: Boolean,
            line: 1,
            meta: Metadata {
                source: "\n# @type boolean\nKEY=\n            ",
                path: "src/dotenv/.env.test.1",
            },
        },
    },
}
