src/dotenv/snapshots/ntro__dotenv__zod__tests__gen.snap
---
source: src/dotenv/zod.rs
expression: output
---
Error {
    context: "found some conflicting types while parsing variables with type hints",
    source: ConflictingTypes {
        a: TypeHintAt {
            th: String,
            file: "src/dotenv/.env.test.0",
            line: 1,
        },
        b: TypeHintAt {
            th: Number,
            file: "src/dotenv/.env.test.1",
            line: 1,
        },
    },
}
